--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <h1>Hi, I'm Derek</h1>
                     <hr class="colored">
                     <p>I am an engineer based in New York City. I have a professional background in software engineering, and am pursuing a degree in biomedical engineering from Columbia University.</p>
-                    <p>My interests include biotech, computer vision, machine learning, video game development, and tech education.</p>
+                    <p>My interests include biotech, brain-computer interfaces, neurogaming, iOS development, and tech education.</p>
                     <p>My hobbies include classical guitar, muay thai boxing, Gundam model building, and memorizing playing cards.</p>
                 </div>
             </div>
@@ -288,27 +288,14 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div id="portfoliolist">
-                        <!-- BETCOIN -->
-                        <div class="portfolio apps" data-cat="apps" href="#portfolioModalBetcoin" data-toggle="modal">
+                        <!-- Muscle Gaming -->
+                        <div class="portfolio apps" data-cat="apps" href="#portfolioModalEMG" data-toggle="modal">
                             <div class="portfolio-wrapper">
-                                <img src="assets/img/portfolio/grid/identity/1.jpg" alt="">
+                                <img src="assets/img/EMG/EMGhandMAN.jpg" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
-                                        <a class="text-title">Betcoin</a>
-                                        <span class="text-category">Predict Bitcoin Prices</span>
-                                    </div>
-                                    <div class="caption-bg"></div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- PENCRAFT -->
-                        <div class="portfolio apps" data-cat="apps" href="#portfolioModalPencraft" data-toggle="modal">
-                            <div class="portfolio-wrapper">
-                                <img src="assets/img/PENCRAFT/pencraft_good.png" alt="">
-                                <div class="caption">
-                                    <div class="caption-text">
-                                        <a class="text-title">Pencraft</a>
-                                        <span class="text-category">Magnetic Motion Controls</span>
+                                        <a class="text-title">Muscle Gaming</a>
+                                        <span class="text-category">Electromyography Racing</span>
                                     </div>
                                     <div class="caption-bg"></div>
                                 </div>
@@ -322,6 +309,19 @@
                                     <div class="caption-text">
                                         <a class="text-title">PDF Focus</a>
                                         <span class="text-category">Empowering Students With Dyslexia</span>
+                                    </div>
+                                    <div class="caption-bg"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- PENCRAFT -->
+                        <div class="portfolio apps" data-cat="apps" href="#portfolioModalPencraft" data-toggle="modal">
+                            <div class="portfolio-wrapper">
+                                <img src="assets/img/PENCRAFT/pencraft_good.png" alt="">
+                                <div class="caption">
+                                    <div class="caption-text">
+                                        <a class="text-title">Pencraft</a>
+                                        <span class="text-category">Magnetic Motion Controls</span>
                                     </div>
                                     <div class="caption-bg"></div>
                                 </div>
@@ -387,6 +387,19 @@
                                     <div class="caption-text">
                                         <a class="text-title">starHOARDER</a>
                                         <span class="text-category">accelerometer-based action</span>
+                                    </div>
+                                    <div class="caption-bg"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- BETCOIN -->
+                        <div class="portfolio apps" data-cat="apps" href="#portfolioModalBetcoin" data-toggle="modal">
+                            <div class="portfolio-wrapper">
+                                <img src="assets/img/portfolio/grid/identity/1.jpg" alt="">
+                                <div class="caption">
+                                    <div class="caption-text">
+                                        <a class="text-title">Betcoin</a>
+                                        <span class="text-category">Predict Bitcoin Prices</span>
                                     </div>
                                     <div class="caption-bg"></div>
                                 </div>
@@ -471,6 +484,37 @@
         </div>
     </footer>
     <!--- ~~~~~~~~~~ Portfolio Modals ~~~~~~~~~~ -->
+    <!-- Muscle Gaming -->
+    <div class="portfolio-modal modal fade" id="portfolioModalEMG" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('assets/img/creative/portfolio/bg-blackwood.jpg')">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <h2>Muscle Gaming</h2>
+                            <hr class="colored">
+                            <p>Electromyography (EMG) Racing</p>
+                        </div>
+                        <div class="col-lg-12">
+                         <h4>IEEE Brain Initiative Award for Innovation, Execution, and Impact of BCI Application</h4>
+                        </div>   
+                        <div class="col-lg-12">
+                              <iframe src="https://player.vimeo.com/video/184381799?title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                        </div>
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- NEUROMATTERS -->
     <div class="portfolio-modal modal fade" id="portfolioModalNeuromatters" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('assets/img/BCI/neuron_background.jpg')">
         <div class="modal-content">
